# codex-playground

./: AGENTS.md  CODEX.md  README.md  SESSION_NOTES.md  config.json  config.yaml  create_job.py  folder_automation_gui.spec  google api.txt  history.json  instructions.md  mini_pytest.py  package-lock.json  package.json  pyproject.toml  pytest  pytest.py  runCodex.js  update-check.json
__tests__/: runCodex.test.js
alta-monorepo/: README.md
alta-monorepo/apps/document-assembly/: README.md
alta-monorepo/apps/estimations/da-lead-scraping/: README.md
alta-monorepo/apps/estimations/estimation-tool/: README.md
alta-monorepo/apps/estimations/folder-automation/: README.md
alta-monorepo/apps/estimations/folder-automation/src/: README.md
alta-monorepo/apps/estimations/folder-automation/tests/: test_folder_automation.py
alta-monorepo/apps/estimations/inventory-sql-db/: README.md
alta-monorepo/apps/estimations/quotation-pipeline/: README.md
alta-monorepo/apps/operations/job-scheduler/: README.md
alta-monorepo/apps/operations/job-scheduler/tests/: README.md
alta-monorepo/apps/operations/operations-pipeline/: README.md
alta-monorepo/apps/scaffold-audit/: README.md
alta-monorepo/apps/scaffold-audit/tests/: test_audit_unittest.py
alta-monorepo/scripts/: dev-setup.ps1
config/: default_rules.yaml
scaffold_audit/: __init__.py  __main__.py  annotator.py  core.py  parser.py  report.py  report_template.html.j2  rules.py  rules_builtin.py
tests/: test_audit_unittest.py  test_create_job.py
workspace/clients/: .gitkeep
(+10 files in other folders)
